--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
-<div class="container">
-  <div class="row">
-      <div class="col">
+
+<div class="container1">
+  <div class="row1">
         <app-menu></app-menu>
-      </div>
   </div>
-  <div class="row">
-    <div class="col">
-      <router-outlet></router-outlet>
-    </div>
+  <div class="row1">
+      <app-dashboard></app-dashboard>
   </div>
 </div>
