--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,76 @@ em{
 }
 
 .card{
-  margin-top: 10px;
-  background-color: #fff;
-  box-shadow: 1px 1px 1px #cabcbc;
+  margin-top: 80px;
+  margin-left: 700px;
+  background-color: #27293D;
+  border-color: #ddd;
+  border-style: groove;
+  width: 400px;
+  height: 400px;
+  padding: 10px;
+  box-shadow:
+       inset 0 -3em 3em rgba(0,0,0,0.1),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+
+.card2{
+  margin-top: 80px;
+  margin-left: 500px;
+  background-color: #27293D;
+  border-color: #ddd;
+  border-style: groove;
+  width: 600px;
+  height: 750px;
+  padding: 10px;
+  box-shadow:
+       inset 0 -3em 3em rgba(0,0,0,0.1),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+
+body {
+  --text-color: #222;
+  --bkg-color: #fff;
+  --btn-txt-color: white;
+  --btn-bg-color: rgb(11, 88, 160);
+  
+}
+body.dark-theme {
+  --text-color: #eee;
+  --bkg-color: #252222;
+  --btn-txt-color: rgb(46, 43, 43);
+  --btn-bg-color: rgb(20, 211, 195);
+  --bs-body-bg: #252222;
+}
+
+body {
+  background: var(--bkg-color);
+  /* background-image: url("https://www.bizportals365.com/wp-content/uploads/dms-features.jpg");
+  background-size: cover; */
+}
+
+h1,h2,
+p {
+  color: var(--text-color);
+}
+button {
+  padding: 10px;
+  border: none;
+  border-radius: 2px;
+  color: var(--btn-txt-color);
+  background-color: var(--btn-bg-color);
+}
+
+
+.topnavicon{
+  --top-nav:-1;
+}
+.topnavicon.dark-theme{
+  --top-nav:1;
+}
+.topnavicon{
+  margin-right: 10px;
+  width: 35px;
+  -webkit-filter: grayscale(1) invert(1);
+  filter: grayscale(1) invert(var(--top-nav));
 }
