--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -39,7 +39,7 @@
           <a routerLink="/people"><img class="topnavicon" src="https://cdn2.iconfinder.com/data/icons/e-commerce-line-4-1/1024/users4-256.png"></a>
           </li>
           <li class="nav-item">
-          <a routerLink="/info"><img class="topnavicon" src="https://cdn0.iconfinder.com/data/icons/mobile-basic-vol-1/32/Profile-256.png"></a>
+          <a routerLink="/userdetails"><img class="topnavicon" src="https://cdn0.iconfinder.com/data/icons/mobile-basic-vol-1/32/Profile-256.png"></a>
           </li>
           <li class="nav-item">
             <button class="btn btn-link" style="color: #ffffff80;font-size: 20px;" (click)="logout()">Logout</button>
