--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
 
-<div class="container1">
-  <div class="row1">
-        <app-menu></app-menu>
-  </div>
-  <div class="row1">
-      <app-dashboard></app-dashboard>
-  </div>
-</div>
+<app-welcome></app-welcome>
