--- a/src/app/dashboard/search/search.component.html
+++ b/src/app/dashboard/search/search.component.html
@@ -1,1 +1,30 @@
-<p>search works!</p>
+<div class="trashtable">
+    <h2 style="text-align:center;">Available Files</h2>
+    <br><br><br>
+    <input type="search" placeholder="Enter file name to search" style="width: 60%;" id="search" name="search"
+        [(ngModel)]="name"> &nbsp;
+
+    <button type="button" class="btn btn-primary" (click)="search()">Search</button>
+    <div *ngIf="element">
+        <table class="table table-striped">
+            <thead>
+                <tr style="color:white;">
+                    <th> File </th>
+                    <th>Name</th>
+                    <th>Comments</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr style="color: aliceblue;">
+                    <td><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png"
+                            style="width: 40px; height:40px"></td>
+                    <td style="color: white;"> {{userdata.name}}</td>
+                    <td style="color: white;">{{userdata.address}}</td>
+                </tr>
+            </tbody>
+        </table>
+        <app-download [fileUrl]="userdata.imgPath"></app-download>
+    </div>
+    <br><br>
+</div>
+
