--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,8 +1,6 @@
-<!-- <div *ngIf="!isUserAuthenticated">
-  <a [routerLink]="['/authentication/login']" [routerLinkActiveOptions]="{exact: true}" >Login</a>
-</div> -->
-<div class="container1" >
-    <div class="row1" >
+<!-- <div routerLink='["/authentication/login"]'><router-outlet></router-outlet></div> -->
+<div class="container1"  >
+    <div class="row1"  >
           <app-menu></app-menu>
     </div>
     <div class="row1">
