--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,27 +1,15 @@
 <div class="trashtable">
-    <table>
-        <tr>
-            <th>Employee Id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Address</th>
-            <th>City</th>
-            <th>Job Position</th>
-            <th>Telephone Number</th>
-            <th>User Email</th>
-        </tr>
-        <tr (click)="pop(notification)" *ngFor="let userinformation of userinformations">
-            <td>{{ userinformation.empId }}</td>
-            <td>{{ userinformation.firstName }}</td>
-            <td>{{ userinformation.lastName }}</td>
-            <td>{{ userinformation.address }}</td>
-            <td>{{ userinformation.city }}</td>
-            <td>{{ userinformation.jobPosition }}</td>
-            <td>{{userinformation.telephoneNo}}</td>
-            <td>{{userinformation.userEmail}}</td>
+    <table  (click)="pop(notification)" *ngFor="let userinformation of userinformations">
+            <tr>Employee Id :{{ userinformation.empId }}</tr>
+            <tr>First Name : {{ userinformation.firstName }}</tr>
+            <tr>Last Name : {{ userinformation.lastName }}</tr>
+            <tr>Address : {{ userinformation.address }}</tr>
+            <tr>City : {{ userinformation.city }}</tr>
+            <tr>Job Position : {{ userinformation.jobPosition }}</tr>
+            <tr>Telephone Number : {{userinformation.telephoneNo}}</tr>
+            <tr>User Email : {{userinformation.userEmail}}</tr>
             <button (click)="approveUser(userinformation)">Approve</button>
             <!-- <button class="button button4" (click)="updateNotification(notification)">Edit</button>
             <button class="button button3" (click)="deleteNotification(notification.id)">Delete</button> -->
-        </tr>
     </table>
 </div>
