--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 <!-- <button onclick="gologin()"></button> -->
-<app-welcome></app-welcome>
+<!-- <div routerLink="/login"></div> -->
+<!-- <router-outlet></router-outlet> -->
+<!-- <div routerLink='["/authentication/login"]'><router-outlet></router-outlet></div> -->
+<div class="container1"  >
+    <div class="row1"  >
+          <app-menu></app-menu>
+    </div>
+    <div class="row1">
+        <app-dashboard></app-dashboard>
+    </div>
+  </div>
