--- a/src/app/dashboard/add/add.component.html
+++ b/src/app/dashboard/add/add.component.html
@@ -1,1 +1,108 @@
-<p>add works!</p>
+<article class="container">
+    <section class="create" *ngIf="isCreate">
+      <h1>Upload File</h1>
+      <form>
+        <div class="mb-3">
+          <label for="name">File Name</label>
+           <input type="text" class="form-control"  id="name" name="name" 
+         placeholder="Enter the File name" [(ngModel)]="name" > 
+        </div> 
+        
+  <div class="mb-3">
+          <label for="address">Comments</label>
+          <input type="text" class="form-control" id="address" name="address" 
+          placeholder="Provide the comments about Document" [(ngModel)]="address">
+        </div>
+       
+        <app-upload-ocr (onUploadFinished)="uploadFinished($event)"></app-upload-ocr>
+        <div class="row">
+          <div class="offset-md-5 col-md-2">
+            <button  type="button" class="btn btn-primary" (click)="onCreate()">Create File</button>
+          </div>
+        </div>
+      </form>
+      <br>
+      <div class="photos" *ngIf="photos.length > 0">
+        <h2 style="text-align:center;">Available Files</h2>
+        <br><br>
+        <!-- <label for="search"></label>
+      <input type="text" class="form-control" id="search" name="search" 
+      placeholder="search" [(ngModel)]="name" (input)="onSearchTextChanged()" >  
+           -->
+  
+   <br>
+          <!-- <button mat-raised-button color="primary">Search</button> -->
+        <input type="search" placeholder="Enter file name to search" style="width: 30%;" id="search" name="search" [(ngModel)]="name"> &nbsp; 
+        
+        <button  type="button" class="btn btn-primary"  (click)="search()">Search</button>
+        <div *ngIf="element">
+          <table class="table table-striped" >
+            <!-- *ngIf="search==='' ||search===userdata.includes(search)" -->
+          <thead>
+            <tr style="color:white;">
+            <th> File </th>
+            <th>Name</th>
+            <th>Comments</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr style="color: aliceblue;">
+  
+           
+            <!-- <td><img [src]="createImgPath(userdata.imgPath)" style="width:60px; height:60px;"></td> -->
+            <td><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png" style="width: 40px; height:40px"></td>
+           
+           
+            <td style="color: white;"> {{userdata.name}}</td>
+            <td style="color: white;">{{userdata.address}}</td>
+           
+          </tr>
+          </tbody>
+        </table>
+        
+         
+          <app-download-ocr [fileUrl]="userdata.imgPath"></app-download-ocr>
+        </div>  
+        
+     
+        <br><br>
+        <!-- <div *ngFor="let photo of photos" class="photo" id="element"> -->
+          <!-- <div (searchTextChanged)="OnSearchTextEntered" -->
+          
+          
+          <!-- *ngIf = "searchText ==='' || user.name.includes(searchText)" ></div> -->
+            <!-- <img [src]="createImgPath(photo)" style="width:60px; height:60px;">
+            <app-download [fileUrl]="photo"></app-download> -->
+        </div>
+    <!-- </div>  -->
+    </section>
+  
+    <section class="users" *ngIf="!isCreate">
+      <table class="table table-striped">
+        <thead>
+          <tr style="color:white;">
+            <th scope="col">File</th>
+            <th scope="col">Name</th>
+            <th scope="col">Comments</th>
+            <th scope="col">Action</th>
+            
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="color: aliceblue;"*ngFor="let user of users">
+             <!-- <td style="color: white;"><img [src]="createImgPath(user.imgPath)" alt="profile picture" style="width:60px; height:60px;"></td>  -->
+             <td style="color: white;"> <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png" style="width: 40px; height:40px"></td> 
+            <td style="color: white;">{{user.name}}</td>
+            <td style="color: white;">{{user.address}}</td>
+            <!-- <td><app-delete [fileUrl]="userdata.imgPath"></app-delete></td>-->
+           <td style="color: white;"> <app-download-ocr [fileUrl]="user.imgPath"></app-download-ocr></td>  
+           </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <div class="offset-md-10 col-md-2">
+          <button type="button" class="btn btn-primary" (click)="returnToCreate()">Back</button>
+        </div>
+      </div>
+    </section>
+  <!-- </article> -->
