--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,13 +4,13 @@
 <div class="row">
   <div class="column side" >
     <div class="sidebar" *ngIf='isUserAuthenticated'>
-      <a routerLink="/add"><img class="navicon" src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_add_48px-512.png">Add</a>
+      <a routerLink="/fileupload"><img class="navicon" src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_add_48px-512.png">Add</a>
       <a routerLink="/documents"><img class="navicon" src="https://cdn4.iconfinder.com/data/icons/business-and-office-line-vol-4/52/documents__records__information__storage-256.png">All Documents</a>
       <a routerLink="/folders"><img class="navicon" src="https://cdn1.iconfinder.com/data/icons/document-edit-line/64/Document-doc-file-folder-bundle-sheaf-archive-256.png" >Folders</a>
       <a routerLink="/starred"><img class="navicon" src="https://cdn1.iconfinder.com/data/icons/modern-universal/32/icon-20-256.png">Starred</a>
       <a routerLink="/issue"><img class="navicon" src="https://cdn0.iconfinder.com/data/icons/mini-documents-and-folders/32/_checklist-256.png">Issues</a>
       <a routerLink="/settings"><img class="navicon" src="https://cdn3.iconfinder.com/data/icons/web-and-seo-31/16/setting-gear-cog-256.png">Settings</a>
-      <a routerLink="/trash"><img class="navicon" src="https://cdn4.iconfinder.com/data/icons/email-2-2/32/Trash-Email-Bin-256.png" >Trash</a>
+      <a routerLink="/add"><img class="navicon" src="https://cdn4.iconfinder.com/data/icons/email-2-2/32/Trash-Email-Bin-256.png" >Trash</a>
     </div>
   </div>
   <div class="column middle">
