--- a/src/app/dashboard/search/search.component.html
+++ b/src/app/dashboard/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="trashtable">
-    <h2 style="text-align:center;">Available Files</h2>
+    <h2 style="text-align:center;">Search your Files</h2>
     <br><br><br>
     <input type="search" placeholder="Enter file name to search" style="width: 60%;" id="search" name="search"
         [(ngModel)]="name"> &nbsp;
