--- a/src/app/forbidden/forbidden.component.html
+++ b/src/app/forbidden/forbidden.component.html
@@ -1,6 +1,6 @@
 <h2>Unauthorized User</h2>
 <p>
     You are unauthorized to see the requested page. 
-    Please <button class="btn btn-link" (click)="navigateToLogin()">log in with a different user</button>
+    Please <button class="btn btn-link" (click)="navigateToLogin()">log in as Admin</button>
     to access.
 </p>
