--- a/src/app/authentication/register-user/register-user.component.html
+++ b/src/app/authentication/register-user/register-user.component.html
@@ -7,15 +7,9 @@
     </div>
 
     <form [formGroup]="registerForm" autocomplete="off" novalidate (ngSubmit)="registerUser(registerForm.value)">
-      <!-- <div class="mb-4 row">
-        <label for="userId" class="col-form-label col-sm-2">User ID:</label>
-        <div class="col-md-8">
-          <input type="text" id="userId" formControlName="userId" class="form-control" />
-        </div>
-      </div> -->
       <div class="mb-3 row">
-        <label for="email" class="col-form-label col-sm-2">Email:</label>
-        <div class="col-md-8">
+        <label for="email" class="col-form-label ">Email:</label>
+        <div class="col-md-12">
           <input type="email" id="email" formControlName="email" class="form-control" />
         </div>
         <div class="col-md-5">
@@ -23,39 +17,9 @@
           <em *ngIf="validateControl('email') && hasError('email', 'required')">Email is required</em>
         </div>
       </div>
-      <!-- <div class="mb-3 row">
-        <label for="fullName" class="col-form-label col-sm-2">Full Name:</label>
-        <div class="col-md-8">
-          <input type="text" id="fullName" formControlName="fullName" class="form-control" />
-        </div>
-      </div>
       <div class="mb-3 row">
-        <label for="address" class="col-form-label col-sm-2">Address:</label>
-        <div class="col-md-8">
-          <input type="text" id="address" formControlName="address" class="form-control" />
-        </div>
-      </div>
-      <div class="mb-3 row">
-        <label for="city" class="col-form-label col-sm-2">City:</label>
-        <div class="col-md-8">
-          <input type="text" id="city" formControlName="city" class="form-control" />
-        </div>
-      </div>
-      <div class="mb-3 row">
-        <label for="jobPosition" class="col-form-label col-sm-2">JobPosition:</label>
-        <div class="col-md-8">
-          <input type="text" id="jobPosition" formControlName="jobPosition" class="form-control" />
-        </div>
-      </div>
-      <div class="mb-3 row">
-        <label for="telephoneNo" class="col-form-label col-sm-2" >Telephone Number:</label>
-        <div class="col-md-8">
-          <input type="text" id="telephoneNo" formControlName="telephoneNo" class="form-control" />
-        </div>
-      </div> -->
-      <div class="mb-3 row">
-        <label for="password" class="col-form-label col-sm-2">Password:</label>
-        <div class="col-md-8">
+        <label for="password" class="col-form-label">Password:</label>
+        <div class="col-md-12">
           <input type="password" id="password" formControlName="password" class="form-control" />
         </div>
         <div class="col-md-5">
@@ -63,8 +27,8 @@
         </div>
       </div>
       <div class="mb-3 row">
-        <label for="confirm" class="col-form-label col-sm-2">Confirm Password:</label>
-        <div class="col-md-8">
+        <label for="confirm" class="col-form-label">Confirm Password:</label>
+        <div class="col-md-12">
           <input type="password" id="confirm" formControlName="confirm" class="form-control" />
         </div>
         <div class="col-md-5">
