--- a/src/app/dashboard/documents/documents.component.html
+++ b/src/app/dashboard/documents/documents.component.html
@@ -1,36 +1,35 @@
-<article class="container">
-    <section class="create" *ngIf="isCreate">
-        <div class="photos" *ngIf="photos.length > 0">
-            <h2 style="text-align:center;">Available Files</h2>
-            <br><br><br>
-            <input type="search" placeholder="Enter file name to search" style="width: 30%;" id="search" name="search"
-                [(ngModel)]="name"> &nbsp;
+<div class="trashtable">
+    <div class="photos" *ngIf="photos.length > 0">
+        <h2 style="text-align:center;">Available Files</h2>
+        <br><br><br>
+        <input type="search" placeholder="Enter file name to search" style="width: 30%;" id="search" name="search"
+            [(ngModel)]="name"> &nbsp;
 
-            <button type="button" class="btn btn-primary" (click)="search()">Search</button>
-            <div *ngIf="element">
-                <table class="table table-striped">
-                    <thead>
-                        <tr style="color:white;">
-                            <th> File </th>
-                            <th>Name</th>
-                            <th>Comments</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr style="color: aliceblue;">
-                            <!-- <td><img [src]="createImgPath(userdata.imgPath)" style="width:60px; height:60px;"></td> -->
-                            <td><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png"
-                                    style="width: 40px; height:40px"></td>
-                            <td style="color: white;"> {{userdata.name}}</td>
-                            <td style="color: white;">{{userdata.address}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <app-download [fileUrl]="userdata.imgPath"></app-download>
-            </div>
-            <br><br>
+        <button type="button" class="btn btn-primary" (click)="search()">Search</button>
+        <div *ngIf="element">
+            <table class="table table-striped">
+                <thead>
+                    <tr style="color:white;">
+                        <th> File </th>
+                        <th>Name</th>
+                        <th>Comments</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr style="color: aliceblue;">
+                        <!-- <td><img [src]="createImgPath(userdata.imgPath)" style="width:60px; height:60px;"></td> -->
+                        <td><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/folder-green-512.png"
+                                style="width: 40px; height:40px"></td>
+                        <td style="color: white;"> {{userdata.name}}</td>
+                        <td style="color: white;">{{userdata.address}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <app-download [fileUrl]="userdata.imgPath"></app-download>
         </div>
-        <h1>Upload File</h1>
+        <br><br>
+    </div>
+    <!-- <h1>Upload File</h1>
         <form>
             <div class="mb-3">
                 <label for="name">File Name</label>
@@ -50,14 +49,14 @@
                     <button type="button" class="btn btn-primary" (click)="onCreate()">Create File</button>
                 </div>
             </div>
-        </form>
-        <br>
-    </section>
+        </form> -->
+    <!-- <br>
+    </section> -->
 
     <section class="users">
         <table class="table table-striped">
             <thead>
-                <tr style="color:white;">
+                <tr style="color:white;font-size: 20px;">
                     <th scope="col">File</th>
                     <th scope="col">Name</th>
                     <th scope="col">Comments</th>
@@ -85,5 +84,5 @@
                 <button type="button" class="btn btn-primary" (click)="returnToCreate()">Back</button>
             </div>
         </div>
-    </section>
-    <!-- </article> -->
+
+        <!-- </article> -->
