--- a/src/app/dashboard/fileupload/ocr/download-ocr/download-ocr.component.html
+++ b/src/app/dashboard/fileupload/ocr/download-ocr/download-ocr.component.html
@@ -4,10 +4,10 @@
       <!-- <button type="button" class="btn btn-success" (click)="delete()">Delete</button>
       &nbsp;  &nbsp;  &nbsp; -->
       
-      <button type="button" class="btn btn-success" (click)="scan()">Scan</button>
+      <button type="button" class="btn btn-success" (click)="scan()">Convert</button>
       &nbsp;  &nbsp;  &nbsp;
       <br><br>
-      <button type="button" class="btn btn-success" (click)="scandownload()">Text Download</button>
+      <button type="button" class="btn btn-success" (click)="scandownload()">Download</button>
       <!-- &nbsp;  &nbsp;  &nbsp;
       <br><br>
       <button type="button" class="btn btn-success" (click)="download()">Image Download</button> -->
