--- a/src/app/privacy/manage-user/show-user/show-user.component.html
+++ b/src/app/privacy/manage-user/show-user/show-user.component.html
@@ -26,8 +26,9 @@
         <td style="color: white;">{{item.telephoneNo}}</td>
         <td style="color: white;">{{item.userEmail}}</td>
         <td>
-          <button class="btn btn-outline-primary me-2 mb-1" (click)="modalEdit(item)" data-bs-toggle="modal"
-            data-bs-target="#staticBackdrop">
+          <!-- <button class="btn btn-outline-primary me-2 mb-1" (onClick)="edit()" data-bs-toggle="modal"
+            data-bs-target="#staticBackdrop"> -->
+            <button (click)="modalEdit(item)">edit</button>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-pencil-square" viewBox="0 0 16 16">
               <path
@@ -35,7 +36,7 @@
               <path fill-rule="evenodd"
                 d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
             </svg>
-          </button>
+          <!-- </button> -->
           <button class="btn btn-outline-danger me-2 mb-1" (click)="delete(item)">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
               viewBox="0 0 16 16">
