--- a/src/app/dashboard/folders/folders.component.css
+++ b/src/app/dashboard/folders/folders.component.css
@@ -18,7 +18,7 @@ input{
 }
 .button {
   border-radius: 5px;
-  background-color: #4CAF50; /* Green */
+  background-color: #4CAF50; 
   border: none;
   color: white;
   padding: 8px 12px;
@@ -69,7 +69,6 @@ tr:hover {background-color: gray;}
 }
 
 .button3:hover {
-  /* background-color: white;  */
   color: black; 
   border: 2px solid #f44336;
 }
@@ -93,3 +92,29 @@ tr:hover {background-color: gray;}
   width: 80px;
   height: 40px;
 }
+
+/* .form-group{
+  display: table-cell;
+  font-size: 14px;
+  margin-left: 8px;
+  min-width: 120px;
+  display: table-cell;
+  width: 490px;
+}
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 80%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10%;
+  margin-bottom: 70%;
+  background-color:#3fa877;
+}
+
+.example-full-width {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+} */
