--- a/src/app/dashboard/folders/folders.component.html
+++ b/src/app/dashboard/folders/folders.component.html
@@ -1,9 +1,5 @@
 <div class="trashtable">
   <form #Form="ngForm" (ngSubmit)="addFolder()">
-    <!-- <div class="form-group">
-        <p><label for="email" style="color: white;">UserId</label></p>
-        <input type="text" class="form-control form-control-lg" placeholder="Enter UserId" name="UserId" [(ngModel)]="notification.id">
-      </div> -->
     <div class="form-group">
       <p><label for="pwd" style="color: white;">Description</label></p>
       <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="name"
@@ -34,7 +30,10 @@
     <tr (click)="pop(folder)" *ngFor="let folder of folders">
       <td>{{ folder.name }}</td>
       <button class="button button4" (click)="updateFolder(folder)">Edit</button>
-      <button class="button button3" (click)="deleteFolder(folder.issueId)">Delete</button>
+      <button class="button button3" (click)="deleteFolder(folder.folderId)">Delete</button>
+      <button class="" (click)="addfiles(folder.folderId)">Add Files</button>
     </tr>
   </table>
-</div>
+</div>  
+
+
