--- a/src/app/userdetails/userdetails.component.html
+++ b/src/app/userdetails/userdetails.component.html
@@ -1,91 +1,53 @@
 <div class="trashtable">
-  <form [formGroup]="form" (ngSubmit)="addUser()">
+  <form #Form="ngForm" (ngSubmit)="addUser()">
     <div class="form-group">
       <p><label for="pwd" style="color: white;">Employee Id</label></p>
-      <input type="text" formControlName="userinformation.empId" class="form-control form-control-lg"
-        placeholder="Enter Description" name="empId" [(ngModel)]="userinformation.empId"
-        [ngClass]="{ 'is-invalid': submitted && f['userinformation.empId'].errors }">
-      <div *ngIf="submitted && f['userinformation.empId'].errors" class="invalid-feedback">
-        <div *ngIf="f['userinformation.empId'].errors['required']">User ID is required</div>
-        <div *ngIf="f['userinformation.empId'].errors['minlength'] && f['userinformation.empId'].errors['maxlength']">
-          Invalid User ID
-        </div>
-      </div>
+      <input type="text" class="form-control form-control-lg"
+        placeholder="Enter Description" name="empId" [(ngModel)]="userinformation.empId">
     </div>
 
     <div class="form-group">
       <p><label for="pwd" style="color: white;">First Name</label></p>
-      <input type="text" formControlName="userinformation.firstName" class="form-control form-control-lg"
-        placeholder="Enter Description" name="firstName" [(ngModel)]="userinformation.firstName"
-        [ngClass]="{ 'is-invalid': submitted && f['userinformation.firstName'].errors }">
-      <div *ngIf="submitted && f['firstName'].errors" class="invalid-feedback">
-        <div *ngIf="f['firstName'].errors['required']">First Name is required</div>
+      <input type="text"  class="form-control form-control-lg"
+        placeholder="Enter Description" name="firstName" [(ngModel)]="userinformation.firstName">
+    </div>
+    <div class="form-group">
+      <p><label for="pwd" style="color: white;">Last Name</label></p>
+      <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="lastName"
+        [(ngModel)]="userinformation.lastName">
+    </div>
+    <div class="form-group">
+      <p><label for="pwd" style="color: white;">Address</label></p>
+      <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="address"
+        [(ngModel)]="userinformation.address">
+    </div>
+    <div class="form-group">
+      <p><label for="pwd" style="color: white;">City</label></p>
+      <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="city"
+        [(ngModel)]="userinformation.city">
+    </div>
+    <div class="form-group">
+      <p><label for="pwd" style="color: white;">Job Position</label></p>
+      <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="jobPosition"
+        [(ngModel)]="userinformation.jobPosition">
+    </div>
+    <div class="form-group">
+      <p><label for="pwd" style="color: white;">Telephone Number</label></p>
+      <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="telephoneNo"
+        [(ngModel)]="userinformation.telephoneNo">
+    </div>
+    <button type="submit" class="button button5">Submit</button><br> -->
+    <div class="row" *ngIf="registerationSuccess">
+      <div class="col-xs-12">
+        <p class="alert alert-success">
+          <strong>Notification sent Success!</strong>
+        </p>
       </div>
+    </div>
+  </form>
+</div>
 
-      <div class="form-group">
-        <p><label for="pwd" style="color: white;">Last Name</label></p>
-        <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="lastName"
-          [(ngModel)]="userinformation.lastName"
-          [ngClass]="{ 'is-invalid': submitted && f['userinformation.lastName'].errors }">
-        <div *ngIf="submitted && f['lastName'].errors" class="invalid-feedback">
-          <div *ngIf="f['lastName'].errors['required']">Last Name is required</div>
-        </div>
-      </div>
-      <div class="form-group">
-        <p><label for="pwd" style="color: white;">Address</label></p>
-        <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="address"
-          [(ngModel)]="userinformation.address"
-          [ngClass]="{ 'is-invalid': submitted && f['userinformation.address'].errors }">
-        <div *ngIf="submitted && f['address'].errors" class="invalid-feedback">
-          <div *ngIf="f['address'].errors['required']">Address is required</div>
-        </div>
-      </div>
-      <div class="form-group">
-        <p><label for="pwd" style="color: white;">City</label></p>
-        <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="city"
-          [(ngModel)]="userinformation.city"
-          [ngClass]="{ 'is-invalid': submitted && f['userinformation.address'].errors }">
-        <div *ngIf="submitted && f['address'].errors" class="invalid-feedback">
-          <div *ngIf="f['address'].errors['required']">Address is required</div>
-        </div>
-      </div>
-      <div class="form-group">
-        <p><label for="pwd" style="color: white;">Job Position</label></p>
-        <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="jobPosition"
-          [(ngModel)]="userinformation.jobPosition"
-          [ngClass]="{ 'is-invalid': submitted && f['userinformation.jobPosition'].errors }">
-        <div *ngIf="submitted && f['jobPosition'].errors" class="invalid-feedback">
-          <div *ngIf="f['jobPosition'].errors['required']">Jop Position is required</div>
-        </div>
-      </div>
-      <div class="form-group">
-        <p><label for="pwd" style="color: white;">Telephone Number</label></p>
-        <input type="text" class="form-control form-control-lg" placeholder="Enter Description" name="telephoneNo"
-          [(ngModel)]="userinformation.telephoneNo"
-          [ngClass]="{ 'is-invalid': submitted && f['userinformation.telephoneNo'].errors }">
-        <div *ngIf="submitted && f['telephoneNo'].errors" class="invalid-feedback">
-          <div *ngIf="f['telephoneNo'].errors['required']">Telephone No is required</div>
-        </div>
-      </div>
-      <button type="submit" class="button button5">Submit</button><br>
-      <!-- <div class="row"  *ngIf="submitMsg">
-        <div class="col-xs-12">
-          <p class="alert alert-success" >
-              <strong>Notification sent Success!</strong>
-          </p>
-        </div>
-      </div>
-
-      <div class="row"  *ngIf="updateMsg">
-        <div class="col-xs-12">
-          <p class="alert alert-success" >
-              <strong>Notification Updated Success!</strong> Please Refresh the page
-          </p>
-        </div>
-      </div> -->
-      <!-- </form> -->
-
-      <table>
+<!-- <table>
         <tr>
           <th>Notifications</th>
         </tr>
@@ -95,4 +57,4 @@
           <button class="button button3" (click)="deleteNotification(notification.id)">Delete</button>
         </tr>
       </table>
-    </div>
+    </div> -->
